--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "color": "^4.2.3",
     "copy-to-clipboard": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "vite-plugin-static-copy": "^2.0.0"
   },
   "devDependencies": {
